@@ -162,10 +162,14 @@ namespace core
 	}
 
 	//! swaps the content of the passed parameters
-	template <class T>
-	inline void swap(T& a, T& b)
+	// Note: We use the same trick as boost and use two template arguments to
+	// avoid ambiguity when swapping objects of an Irrlicht type that has not
+	// it's own swap overload. Otherwise we get conflicts with some compilers
+	// in combination with stl.
+	template <class T1, class T2>
+	inline void swap(T1& a, T2& b)
 	{
-		T c(a);
+		T1 c(a);
 		a = b;
 		b = c;
 	}
